Reajustado porcentajes skills

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -850,6 +850,22 @@ textarea.form-control {
 .filled-bar-2 {
   position: absolute;
   z-index: 99;
+  width: 60%;
+  height: 6px;
+  background-color: #fff;
+  border-radius: 3px;
+}
+.filled-bar-3 {
+  position: absolute;
+  z-index: 99;
+  width: 75%;
+  height: 6px;
+  background-color: #fff;
+  border-radius: 3px;
+}
+.filled-bar-4 {
+  position: absolute;
+  z-index: 99;
   width: 82%;
   height: 6px;
   background-color: #fff;
